--- a/schmaljohnstyles.css
+++ b/schmaljohnstyles.css
@@ -5,3 +5,5 @@ div#contents{text-align:left;}
 
 h2 {font-style:italic;}
 .bolded{font-weight:bold;}
+
+img {border-style:inset;border-width:8px;border-color:orange;margin:15px;padding:10px;}
